@@ -3,29 +3,24 @@ plugins {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_14
-    targetCompatibility = JavaVersion.VERSION_14
-    modularity.inferModulePath = true
-}
-
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
-    testImplementation 'org.assertj:assertj-core:3.16.1'
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 test {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 }
